feat(): add @Reduce macro

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Reducer.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Reducer.xcscheme
@@ -26,17 +26,25 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "ReducerTests"
                BuildableName = "ReducerTests"
                BlueprintName = "ReducerTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "MacroTests"
+               BuildableName = "MacroTests"
+               BlueprintName = "MacroTests"
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
