feat(): add lifecycle for handling errors to `Reduce`

--- a/.swiftpm/xcode/xcshareddata/xcschemes/Reducer.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Reducer.xcscheme
@@ -77,6 +77,16 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "ReducerMacroTests"
+               BuildableName = "ReducerMacroTests"
+               BlueprintName = "ReducerMacroTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
